<resources>
    <string name="app_name">ComonentCourse Assignment 3 SQLITE</string>
    <string name="hint">Enter Employee Name</string>
    <string name="button">Search</string>
    <string name="title">Employee DataBase</string>
    <string name="title_activity_info">InfoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="empInfoTitle">Employee Details</string>
    <string name="empName">Name : </string>
    <string name="empPhone">Phone : </string>
    <string name="empDept">Department: </string>
    <string name="empEmail">Email: </string>
    <string name="empTitle">Title: </string>
</resources>
